# projet_streamlit_linux

./: .gitignore  Dockerfile  README.md  app.py  deploy.sh  presentation.pptx  pyproject.toml  ~$presentation.pptx
data_collector/conf/: collector.conf
